--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/kopie
+/todo.txt
+/CreateBackup.bat
+/sql
+/excluded
+.apt_generated/
+.settings/
+target/
+bin/
+.metadata/
+.classpath
+.factorypath
+.project
+/logs/
+/test-mvn3.bat
